# FinalProject-3

amazon_sales_flow/: README.md  clean_data.csv  eda_report.html  insights.md  pyproject.toml
amazon_sales_flow/src/amazon_sales_flow/: main.py
amazon_sales_flow/src/amazon_sales_flow/crews/dataanalyst_crew/: dataanalyst_crew.py
amazon_sales_flow/src/amazon_sales_flow/crews/dataanalyst_crew/config/: agents.yaml  tasks.yaml
amazon_sales_flow/src/amazon_sales_flow/crews/datascientist_crew/: datascientist_crew.py
amazon_sales_flow/src/amazon_sales_flow/crews/datascientist_crew/config/: agents.yaml  tasks.yaml
amazon_sales_flow/src/amazon_sales_flow/tools/: custom_tool.py
