[project]
name = "amazon_sales_flow"
version = "0.1.0"
description = "Amazon_Sales_Flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0"
]

[project.scripts]
kickoff = "amazon_sales_flow.main:kickoff"
run_crew = "amazon_sales_flow.main:kickoff"
plot = "amazon_sales_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
